# flowstat

./: pyproject.toml
flowstat/: __init__.py  __main__.py  app.css  display.py
