[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "flowstat"
version = "0.0.1"
dependencies = [
    "tensorflow; sys_platform == 'linux' or platform_system == 'Windows'",
    "tensorflow_macos; sys_platform == 'darwin'",
    "numpy >= 1.22",
    "pillow >= 9",
    "textual >= 0.10"
]